# abacus

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  split_demo.ipynb
abacus/: __init__.py  types.py  version.py
analysis/: ab_params.py  abtest.py  params.py  stat_test.py  test_class.py  variance_reduction.py
auto_ab/: abtest.py  graphics.py  parallel.py  params.py  simulation.py  splitter.py  variance_reduction.py
docs/: requirements.txt
examples/: abacus_demo.ipynb  abacus_demo_new.ipynb  abacus_example.ipynb  bk_prepilot.ipynb  bucketing_example.ipynb  cuped_demo.ipynb  experiment_design_example.ipynb  linearization_example.ipynb  pipeline_demo.ipynb  post_analysis_demo.ipynb  post_analysis_example.ipynb  prepilot_demo.ipynb  resplit.ipynb  spark_prepilot.ipynb  split_demo.ipynb  splitter_example.ipynb  stratification_split_demo.ipynb  transformations_example.ipynb  variance_reduction_example.ipynb
hooks/: pre-commit
mde_explorer/: mde_explorer_builder.py  params.py
notebooks/: bk_prepilot.ipynb  cuped_demo.ipynb  pipeline_demo.ipynb  post_analysis_demo.ipynb  prepilot_demo.ipynb  split_builder.ipynb  stratification_split_demo.ipynb
prepilot/: abstract_experiment_builder.py  params.py  prepilot_experiment_builder.py  prepilot_split_builder.py
prepilot_local/: abstract_experiment_builder.py  params.py  prepilot_experiment_builder.py  prepilot_split_builder.py
prepilot_spark/: params.py  prepilot_split_builder.py
resplitter/: params.py  (+1 more)
(+80 files in other folders)
