[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ABacus"
authors = [
    {name = "Vadim Glukhov", email = "educauchy@gmail.com"},
    {name = "Egor Shishkovets", email = ""},
    {name = "Dmitry Zabavin", email = ""},
]
dynamic = ["version", "description"]
