[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolmogorov-abacus"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Vadim Glukhov", email = "educauchy@gmail.com"},
    {name = "Egor Shishkovets", email = ""},
    {name = "Dmitry Zabavin", email = ""},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["A/B", "experiments", "OCE", "ab test"]
dynamic = ["dependencies"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/kolmogorov-lab/kolmogorov-abacus"